//  Copyright 2019 The bigfile Authors. All rights reserved.
//  Use of this source code is governed by a MIT-style
//  license that can be found in the LICENSE file.

syntax = "proto3";

package bigfile.token;

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "Bigfile.Protobuf.WellKnownTypes";
option cc_enable_arenas = true;
option go_package = "github.com/bigfile/bigfile/rpc";
option java_package = "com.bigfile.protobuf";
option java_outer_classname = "TokenProto";
option java_multiple_files = true;
option objc_class_prefix = "BPR";

// Token represent a token type
message Token {
    string token = 1;
    string path = 2;
    google.protobuf.StringValue ip = 3;
    int32 available_times = 4;
    google.protobuf.StringValue secret = 5;
    bool read_only = 6;
    google.protobuf.Timestamp expired_at = 7;
    google.protobuf.Timestamp deleted_at = 8;
}