//  Copyright 2019 The bigfile Authors. All rights reserved.
//  Use of this source code is governed by a MIT-style
//  license that can be found in the LICENSE file.

// bigfile.token_update is used to describe the message
// format for updating token


syntax = "proto3";

package bigfile.token_update;

import "token.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "Bigfile.Protobuf.BigFileTypes";
option cc_enable_arenas = true;
option go_package = "github.com/bigfile/bigfile/rpc";
option java_package = "com.bigfile.protobuf";
option java_outer_classname = "TokenUpdateProto";
option java_multiple_files = true;
option objc_class_prefix = "BPR";

// TokenUpdateRequest is used to describe the input format
// for updating token
message TokenUpdateRequest {
    string app_uid = 1;
    string app_secret = 2;
    string token = 3;
    google.protobuf.StringValue path = 4;
    google.protobuf.StringValue ip = 5;
    google.protobuf.StringValue secret = 6;
    google.protobuf.UInt32Value available_times = 7;
    google.protobuf.BoolValue read_only = 8;
    google.protobuf.Timestamp expired_at = 9;
}

// TokenUpdateResponse
message TokenUpdateResponse {
    uint64 request_id = 1;
    bigfile.token.Token token = 4;
}

// TokenCreate is used to create a token
service TokenUpdate {
    rpc tokenUpdate (TokenUpdateRequest) returns (TokenUpdateResponse) {}
}